membuat api untuk activate user
